Fix text wrapping under bullet

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -446,6 +446,7 @@ details {
     text-align: center;
     float:left;
     margin-right:10px;
+    margin-bottom: 20px;
 }
 .black-circle{
       background: #0b0c0c!important;
